plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.iitp'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation("org.springframework.boot:spring-boot-starter-web") // 🚀 웹 기능 추가!

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.hibernate.orm:hibernate-core:6.2.7.Final'
	runtimeOnly 'org.postgresql:postgresql'

	// JSON 직렬화/역직렬화 (Jackson)
	implementation("com.fasterxml.jackson.core:jackson-databind")

	// Cesium 관련 계산이 필요한 경우 (JTS 지리 정보 라이브러리)
	implementation("org.locationtech.jts:jts-core:1.18.2")

	// Lombok (선택 사항, 코드 간결화)
	compileOnly("org.projectlombok:lombok")
	annotationProcessor("org.projectlombok:lombok")

	// 테스트 라이브러리
	testImplementation("org.springframework.boot:spring-boot-starter-test")

	// Log4j2
	implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
	implementation 'org.apache.logging.log4j:log4j-api:2.17.2'

	// Proj4J (좌표 변환)
	implementation 'org.locationtech.proj4j:proj4j:1.1.0'

	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
	implementation 'org.json:json:20231013'

	implementation 'org.xerial:sqlite-jdbc:3.36.0.3'  // SQLite JDBC 의존성 추가
	implementation 'com.jcraft:jsch:0.1.55'

	implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'

	implementation 'org.apache.commons:commons-math3:3.6.1'

}

tasks.named('test') {
	useJUnitPlatform()
}
